--- a/inicial.html
+++ b/inicial.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <h1>OLa esse é meu primeiro HTML</h1>
+        <h1>Ola esse e meu primeiro HTML</h1>
     </body>
 
 </html>
