--- a/htmls/formatacao_de_texto.html
+++ b/htmls/formatacao_de_texto.html
@@ -27,5 +27,7 @@
     <p>
         Texto<sup>123</sup>
     </p>
+    <br>
+    <li><a href="links.html">Voltar para a pagina dos Links</a></li>
 </body>
 </html>
