--- a/htmls/estrutura.html
+++ b/htmls/estrutura.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     texto qualquer
+    <br><br>
+    <li><a href="links.html">Voltar para a pagina dos Links</a></li>
 </body>
 </html>
