--- a/htmls/tabelas.html
+++ b/htmls/tabelas.html
@@ -9,13 +9,13 @@
 <body>
     <h1>TABELAS</h1>
     <h2>Implicita</h2>
-    <table border="1" width="1000">
-        <tr bgcolor="blue">
-            <td width="10%">#ID</td>
-            <td width="30%">Projetos</td>
-            <td width="40%">Títulos</td>
-            <td width="10%">Status</td>
-            <td width="10%">Comentarios</td>
+    <table cellpadding="10" cellspacing="5" border="1" width="1000">
+        <tr bgcolor="yellow">
+            <td align="center"width="10%">#ID</td>
+            <td align="center"width="30%">Projetos</td>
+            <td align="center"width="40%">Títulos</td>
+            <td align="center"width="10%">Status</td>
+            <td align="center"width="10%">Comentarios</td>
         </tr>
         <tr>
             <td>1</td>
@@ -63,14 +63,14 @@
     </table>
 
 <h2>Explicita</h2>
-<table border="1" width="1000">
+<table cellpadding="10" cellspacing="5" border="1" width="1000">
     <thead>
-        <tr bgcolor="blue">
-            <td width="10%">#ID</td>
-            <td width="30%">Projetos</td>
-            <td width="40%">Títulos</td>
-            <td width="10%">Status</td>
-            <td width="10%">Comentarios</td>
+        <tr bgcolor="yellow">
+            <td align="center"width="10%">#ID</td>
+            <td align="center"width="30%">Projetos</td>
+            <td align="center"width="40%">Títulos</td>
+            <td align="center"width="10%">Status</td>
+            <td align="center"width="10%">Comentarios</td>
     </thead>
     <tbody>
     </tr>
