--- a/htmls/tabelas.html
+++ b/htmls/tabelas.html
@@ -9,9 +9,9 @@
 <body>
     <h1>TABELAS</h1>
     <h2>Implicita</h2>
-    <table cellpadding="10" cellspacing="5" border="1" width="1000">
-        <tr bgcolor="yellow">
-            <td align="center"width="10%">#ID</td>
+    <table cellpadding="10" cellspacing="5" border="1" width="1000" bordercolor="#00BFFF" frame="void">
+        <tr bgcolor="#FFD700">
+            <td align="center"width="10%" >#ID</td>
             <td align="center"width="30%">Projetos</td>
             <td align="center"width="40%">Títulos</td>
             <td align="center"width="10%">Status</td>
@@ -63,9 +63,9 @@
     </table>
 
 <h2>Explicita</h2>
-<table cellpadding="10" cellspacing="5" border="1" width="1000">
+<table cellpadding="10" cellspacing="5" border="1" width="1000" bordercolor="#00BFFF" frame="void" >
     <thead>
-        <tr bgcolor="yellow">
+        <tr bgcolor="#FFD700">
             <td align="center"width="10%">#ID</td>
             <td align="center"width="30%">Projetos</td>
             <td align="center"width="40%">Títulos</td>
