--- a/htmls/tabelas.html
+++ b/htmls/tabelas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>TABELAS</h1>
+    <!--Incio da primeira tabela-->
     <h2>Implicita</h2>
     <table cellpadding="10" cellspacing="5" border="1" width="1000" bordercolor="#00BFFF" frame="void">
         <tr bgcolor="#FFD700">
@@ -59,10 +60,11 @@
             <td>Processamento</td>
             <td>0</td>
         </tr>
-
+    <!--fim da primeira tabela-->
     </table>
 
 <h2>Explicita</h2>
+    <!--Incio da segunda tabela-->
 <table cellpadding="10" cellspacing="5" border="1" width="1000" bordercolor="#00BFFF" frame="void" >
     <thead>
         <tr bgcolor="#FFD700">
@@ -118,6 +120,6 @@
     </tr>
     </tbody>
 </table>
-    
+    <!--fim da segunda tabela-->
 </body>
 </html>
