--- a/htmls/estrutura.html
+++ b/htmls/estrutura.html
@@ -10,5 +10,17 @@
     texto qualquer
     <br><br>
     <li><a href="links.html">Voltar para a pagina dos Links</a></li>
+    <h3>Lista de Paginas</h3>
+    <ul>
+        <li><a href="video.html"> Video</a></li>
+        <li><a href="formatacao_de_texto.html">Formatação de Texto</a></li>
+        <li><a href="imagens.html">Imagens</a></li>
+        <li><a href="iframes.html">Iframes</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+        <li><a href="audio.html" >Audio</a></li>
+        <li><a href="lista.html">Listas</a></li>
+        
+    </ul>
 </body>
 </html>
