--- a/htmls/imagens.html
+++ b/htmls/imagens.html
@@ -13,7 +13,18 @@
     alt="Foto de uma paisagem bonita"
     width="300"
     >
-    
+    <h3>Lista de Paginas</h3>
+    <ul>
+        <li><a href="estrutura.html"> Estruturas</a></li>
+        <li><a href="formatacao_de_texto.html">Formatação de Texto</a></li>
+        <li><a href="video.html">Video</a></li>
+        <li><a href="iframes.html">Iframes</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+        <li><a href="audio.html" >Audio</a></li>
+        <li><a href="lista.html">Listas</a></li>
+        
+    </ul>
 
 </body>
 </html>
