--- a/htmls/formatacao_de_texto.html
+++ b/htmls/formatacao_de_texto.html
@@ -29,5 +29,18 @@
     </p>
     <br>
     <li><a href="links.html">Voltar para a pagina dos Links</a></li>
+
+    <h3>Lista de Paginas</h3>
+    <ul>
+        <li><a href="estrutura.html"> Estruturas</a></li>
+        <li><a href="video.html">Video</a></li>
+        <li><a href="imagens.html">Imagens</a></li>
+        <li><a href="iframes.html">Iframes</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+        <li><a href="audio.html" >Audio</a></li>
+        <li><a href="lista.html">Listas</a></li>
+        
+    </ul>
 </body>
 </html>
