--- a/htmls/links.html
+++ b/htmls/links.html
@@ -7,12 +7,17 @@
     <title>Links</title>
 </head>
 <body>
-    <h1>Lista de paginas</h1>
+    <h3>Lista de Paginas</h3>
     <ul>
         <li><a href="estrutura.html"> Estruturas</a></li>
         <li><a href="formatacao_de_texto.html">Formatação de Texto</a></li>
-        <li><a href="imagens.html" target="_blank">Imagens</a></li>
-        <li><a href="#final">Rolar para o Final da Pagina</a></li>
+        <li><a href="imagens.html">Imagens</a></li>
+        <li><a href="iframes.html">Iframes</a></li>
+        <li><a href="video.html">Video</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+        <li><a href="audio.html" >Audio</a></li>
+        <li><a href="lista.html">Listas</a></li>
+        
     </ul>
     <br><br>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius reiciendis nihil quas sunt vero saepe! Pariatur nisi, mollitia nam et quam nemo, laborum rem labore, similique repudiandae inventore quod! Maiores.</p>
