--- a/htmls/lista.html
+++ b/htmls/lista.html
@@ -41,5 +41,17 @@
             Definição do elemento, subtitulo
         </dd>
     </dl>
+    <h3>Lista de Paginas</h3>
+    <ul>
+        <li><a href="estrutura.html"> Estruturas</a></li>
+        <li><a href="formatacao_de_texto.html">Formatação de Texto</a></li>
+        <li><a href="imagens.html">Imagens</a></li>
+        <li><a href="iframes.html">Iframes</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+        <li><a href="audio.html" >Audio</a></li>
+        <li><a href="video.html">Video</a></li>
+        
+    </ul>
 </body>
 </html>
