--- a/htmls/inputs_basicos.html
+++ b/htmls/inputs_basicos.html
@@ -31,7 +31,27 @@
         <textarea name="texto" id="" cols="100" rows="10"></textarea><br>
         
         <label>Arquivo</label><br>
-        <input type="file" name="arquivo" id=""><br>
+        <input type="file" name="arquivo" id=""><br><br>
+
+        <label>Sexo</label><br>
+        <select name="sexo" id="">
+            <option value="">Selecione</option>
+            <option value="masculino">Masculino</option>
+            <option selected value="feminino">Feminino</option>    
+        </select><br><br>
+
+        <label>Marcas de Carros</label><br>
+        <select name="carros" id="">
+            <optgroup label="Alemaes">
+                <option selected value="mercedes">Mercedes</option>
+                <option value="audi">Audi</option>
+            </optgroup>
+            <optgroup label="Suecos">
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+            </optgroup>
+        </select>
+
     </form>
 </body>
 </html>
