--- a/htmls/cadastro.html
+++ b/htmls/cadastro.html
@@ -12,7 +12,7 @@
     <tr >
        <td bgcolor="#f80032" width="100%"  >
         <a href="https://www.americanas.com.br/"a> 
-        <img src="/htmls/Imagens/americanas.png" alt="">
+        <img src="../htmls/Imagens/americanas.png" alt="">
        </td>
        
     </tr>
