--- a/htmls/Cadastro Americanas/cadastro_de_cliente.html
+++ b/htmls/Cadastro Americanas/cadastro_de_cliente.html
@@ -120,7 +120,7 @@
         <tr>
             <td><br>
                <font size="3" face="arial"  color="#6B6B6B">Não se preocupe, nosso site é seguro! Ao criar o seu <br>
-                cadastro, você concorda com a nossa <a href="https://www.americanas.com.br/hotsite/politica-de-privacidade" a>Política de <br> Privacidade</font><br>                
+                cadastro, você concorda com a nossa <a href="./politica_de_privacidade.html" a>Política de <br> Privacidade</a></font><br>                
 
           </td>    
         </tr>
