--- a/htmls/Cadastro Americanas/cadastro_de_cliente.html
+++ b/htmls/Cadastro Americanas/cadastro_de_cliente.html
@@ -27,7 +27,7 @@
     <font size="2" face="arial">campos obrigatórios</font>
     </p>
     
-    <form action="/htmls/cadastro.html" method="post">
+    <form action="../Cadastro Americanas/cadastro_de_cliente.html" method="post">
      <table align="center"  >
         <tr>
             <td>
@@ -114,7 +114,7 @@
         
         <tr align="center" >
             <td ><br>
-                <button type="submit" formaction="/htmls/cadastro.html" formmethod="post" name="novocadastro">criar seu cadastro</button>
+                <button type="submit" formaction="../Cadastro Americanas/cadastro_de_cliente.html" formmethod="post" name="novocadastro">criar seu cadastro</button>
             </td>    
         </tr>
         <tr>
@@ -126,7 +126,7 @@
         </tr>
         <tr align="center">
             <td> <br>
-                <font size="3" face="arial"  color="#6B6B6B">já tem cadastro? <a href="https://cliente.americanas.com.br/simple-login/"a>entrar</font>
+                <font size="3" face="arial"  color="#6B6B6B">já tem cadastro? <a href="./login.html"a>entrar</font>
             </td>
         </tr>
 
