--- a/htmls/Cadastro Americanas/login.html
+++ b/htmls/Cadastro Americanas/login.html
@@ -15,6 +15,47 @@
            </td>
            
         </tr>
-    </table>
+    </table>><br>
+    <font size="3" font color="#6B6B6B" face="arial">
+        <h1 align="center"><img src="./Imagens/login.jpg">login do cliente</h1>
+        <p align="center">Veja seus pedidos de forma fácil, compre mais<br>
+                         rápido e tenha uma experiência personalizada :)</p>
+    </font>
+
+    <form action="../Cadastro Americanas/login.html" method="post"></form>
+      <table align="center" >
+        <tr>
+            <td>                
+                <font size="3" face="arial"  color="#6B6B6B">e-mail:</font><br>
+                <input type="email" name="email" size="50"><br>    
+            </td>    
+        </tr>
+        <tr>
+            <td><br>
+                <font size="3" face="arial"  color="#6B6B6B">senha na americanas: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  esqueceu?</font><br>
+                <input type="password" name="senha" size="50"><br>
+            </td>    
+        </tr>
+        <tr align="center" widht="50">
+            <td ><br>
+                <button type="submit" formaction="../Cadastro Americanas/login.html" formmethod="post" name="novocadastro" width="50px"> continuar </button>
+            </td>    
+        </tr>
+        <tr align="center">
+            <td> <br><br>
+                <font size="3" face="arial"  color="#6B6B6B">não tem cadastro? <a href="./cadastro_de_cliente.html"a>cadastre-se</font>
+            </td>
+        </tr>
+        <tr align="center">
+            <td><br>
+               <font size="3" face="arial"  color="#6B6B6B">Ao continuar com o acesso, você concorda com a nossa<br>
+               <a href="./politica_de_privacidade.html" a>política de privacidade</a></font><br>                
+
+          </td>
+
+      </table>
+    </form> 
+
 </body>
 </html>
