--- a/htmls/Cadastro Americanas/cadastro_de_cliente.html
+++ b/htmls/Cadastro Americanas/cadastro_de_cliente.html
@@ -108,7 +108,7 @@
         <tr>
             <td><br>
                 <input type="checkbox" name="email">compartilhar meus dados com parceiros para ter<br> conteúdos personalizados,
-                <a href="https://www.americanas.com.br/hotsite/politica-de-privacidade"a> como funciona.
+                <a href="../Cadastro Americanas/politica_de_privacidade.html"a> como funciona.
             </td>    
         </tr>
         
