--- a/css/exemplo3.html
+++ b/css/exemplo3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 3 - CSS</title>
+    <link rel="stylesheet" href="exemplo3.css">
 </head>
 <body>
     <!-- CSS - Externo  -->
