--- a/css/exemplo2.html
+++ b/css/exemplo2.html
@@ -28,6 +28,15 @@
         }
         #campo_email{
             height: 45px;
+            background-color: #940b2b;
+        }
+
+        #box-exemplo{
+            width: 400px;
+            height: 400px;
+            background-color: #00000060;
+            position: absolute;
+            top: 0px;
         }
     </style>
 </head>
@@ -45,7 +54,11 @@
         <label>Senha</label>
         <input class="tracejado" type="password" name="senha">
 
+
+
     </form>
+
+    <div id="box-exemplo"></div>
 
 </body>
 </html>
