--- a/css/exemplo4.html
+++ b/css/exemplo4.html
@@ -5,8 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 4 - Box</title>
+    <style>
+        body{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-size: 16px;
+        }
+        section{
+            margin-bottom: 20px;
+            background-color: silver;
+            padding: 10px;
+        }
+        #primeira-sessao > div{
+            background-color: white;
+            display: block;
+            width: 45%;
+            display: inline-block;
+            padding: 10px;
+            min-height: 180px;
+        }
+        #caixa{
+            background-color: red;
+            width: 300PX;
+            height: 300PX;
+            padding: 10px;
+        }
+        #caixa2{
+            background-color: black;
+            width: 100%;
+            height: 100%;
+        }
+        #posicao{
+            margin-left: 140px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Exemplo 4</h1>
+    <section id="primeira-sessao">
+        <div>
+            <h2>Titulo da noticia 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rerum ad, recusandae et voluptas illo minus, nihil deserunt iusto nesciunt aperiam fugiat nobis sit corrupti. Reiciendis, eum eius? Earum, facilis!</p>
+        </div>
+        <div id="posicao">
+            <h2>Titulo da noticia 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rerum ad, recusandae et voluptas illo minus, nihil deserunt iusto nesciunt aperiam fugiat nobis sit corrupti. Reiciendis, eum eius? Earum, facilis!</p>
+        </div>
+
+    </section>
+
+    <section>
+        <div>
+            <h2>Titulo da noticia 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rerum ad, recusandae et voluptas illo minus, nihil deserunt iusto nesciunt aperiam fugiat nobis sit corrupti. Reiciendis, eum eius? Earum, facilis!</p>
+        </div>
+        <div>
+            <h2>Titulo da noticia 4</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rerum ad, recusandae et voluptas illo minus, nihil deserunt iusto nesciunt aperiam fugiat nobis sit corrupti. Reiciendis, eum eius? Earum, facilis!</p>
+        </div>
+
+    </section>
+    <div id="caixa">
+        <div id="caixa2"></div>
+    </div>
+
+
+
 </body>
 </html>
