--- a/css/exemplo4.html
+++ b/css/exemplo4.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 4 - Box</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Road+Rage&display=swap" rel="stylesheet">
     <style>
         body{
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 16px;
+        }
+        h1{
+            font-family: 'Indie Flower', cursive;
+            color: pink;
+            font-size: 50px;
         }
         section{
             margin-bottom: 20px;
@@ -22,6 +30,8 @@
             display: inline-block;
             padding: 10px;
             min-height: 180px;
+            font-family: 'Road Rage', cursive;
+            font-size: 50px;
         }
         #caixa{
             background-color: red;
