--- a/css/exemplo4.html
+++ b/css/exemplo4.html
@@ -48,6 +48,9 @@
         #posicao{
             margin-left: 140px;
         }
+        #segunda-sessao{
+            background-image: url(paisagem.jpg) ;
+        }
     </style>
 </head>
 <body>
@@ -64,7 +67,7 @@
 
     </section>
 
-    <section>
+    <section id="segunda-sessao">
         <div>
             <h2>Titulo da noticia 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rerum ad, recusandae et voluptas illo minus, nihil deserunt iusto nesciunt aperiam fugiat nobis sit corrupti. Reiciendis, eum eius? Earum, facilis!</p>
