--- a/css/exemplo5.html
+++ b/css/exemplo5.html
@@ -6,7 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        margin: 0px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    ul{
+        list-style: nome;
+        background-color: seagreen;
+        padding: 0px;
+        margin: 0px;
+    }
+    ul > li{
+        display: inline-block;
+        padding: 0px;
+        margin: 0px;
+        font-size: 24px;
+        padding: 10px;
+        margin: 5px;
+        background-color: springgreen;
+
+    }
+    ul > li:hover {
+        background-color: teal;
+        cursor: pointer;
+        color: white;
+
+    }
+</style>
 <body>
     
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
+
+
 </body>
 </html>
