--- a/css/exemplo5.html
+++ b/css/exemplo5.html
@@ -24,7 +24,7 @@
         font-size: 24px;
         padding: 10px;
         margin: 5px;
-        background-color: springgreen;
+        background-color: springgreen;border-radius: 10px 10px 0px 0px;
 
     }
     ul > li:hover {
@@ -34,12 +34,15 @@
 
     }
     #conteudo{
-        background-color: thistle;
+        background-color: #ff660060;
         width: 500px;
         margin: auto;
+        padding: 30px;
         position: fixed;
-        top: 0px;
+        top: 20px;
         right: 0px;
+        border: solid 2px purple;
+        border-radius: 20px 0px 0px 20px;
 
     }
 </style>
@@ -56,29 +59,6 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi maxime vitae laboriosam tempora nihil debitis laborum expedita harum voluptas facere quae assumenda neque inventore, quo earum, culpa ab aut pariatur!</p>
 
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero blanditiis unde placeat consequuntur cupiditate ullam odit nobis minima eveniet dolor, at dolorum accusantium voluptatibus vel ad a vero non reprehenderit!</p><br>
+     
 </body>
 </html>
