--- a/css/exemplo5.html
+++ b/css/exemplo5.html
@@ -25,6 +25,8 @@
         padding: 10px;
         margin: 5px;
         background-color: springgreen;border-radius: 10px 10px 0px 0px;
+        text-transform: lowercase;
+        font-weight: 900;
 
     }
     ul > li:hover {
@@ -43,6 +45,8 @@
         right: 0px;
         border: solid 2px purple;
         border-radius: 20px 0px 0px 20px;
+        text-transform: uppercase;
+        font-style: italic;
 
     }
 </style>
