--- a/Site Netflix/netflix.html
+++ b/Site Netflix/netflix.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="netflix.css">
+    <link rel="stylesheet" type="text/css" href="netflix.css">
+    
 </head>
 
 <body>
@@ -14,9 +15,11 @@
         <img src="../Site Netflix/fundo_topo.png" alt="" class="imagem-fundo">
         </div>
     </div>
-    <div id="fundo-transparente" >
-
+    <div class="logo">
+        <img src="../Site Netflix/logo.png" alt="" width="420" height="205" >
     </div>
+
+
 
     
 </body>
