--- a/Site Netflix/netflix.html
+++ b/Site Netflix/netflix.html
@@ -15,6 +15,9 @@
             Fimes, séries e muito mais.<br>
             Sem Limites.
         </p>
+        <p class="titulo2">
+            Assista onde quiser. Cancele quando quiser.
+        </p>
         <div>
         <img src="../Site Netflix/fundo_topo.png" alt="" class="imagem-fundo">
         </div>
