--- a/Site Netflix/netflix.html
+++ b/Site Netflix/netflix.html
@@ -20,11 +20,16 @@
     <div >
         <img src="../Site Netflix/logo.png" alt="" width="150" height="100">
     </div>
+    
 </section>
 
-<div class="texto-topo">
-    <h1>Filmes, séries e muito mais <br> Sem limtes.</h1>
+<section id="texto1">
+<div>
+    <h1 >Filmes, séries e muito mais <br> Sem limtes.</h1>
+    <p>Assista onde quiser. Cancele quando quiser</p>
+
 </div>
+</section>
 
 
     
