--- a/Site Netflix/netflix.html
+++ b/Site Netflix/netflix.html
@@ -23,13 +23,13 @@
     
 </section>
 
-<section id="texto1">
-<div>
-    <h1 >Filmes, séries e muito mais <br> Sem limtes.</h1>
-    <p>Assista onde quiser. Cancele quando quiser</p>
 
+<div class="texto">            
+    <h1>Filmes, séries e muito mais.<br>  Sem limites.</h1>
+    <p>Assita onde quiser. Cancele quando quiser.</p>
+    <label>Pronto para assistir? infome seu email para criar ou reniciar sua assinatura.</label><br>        
 </div>
-</section>
+
 
 
     
