--- a/Site Netflix/netflix.html
+++ b/Site Netflix/netflix.html
@@ -32,6 +32,10 @@
     <label>Pronto para assistir? infome seu email para criar ou reniciar sua assinatura.</label><br>        
 </div>
 
+<div id="email">
+    <input placeholder="Email" type="email">
+    <a href="https://www.netflix.com/signup/registration?locale=pt-BR"><button>Vamos lá ></button></a>
+</div>
 
 
     
